implementing order in sale price list grid
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42465

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceList/Templates/SalePriceListGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceList/Templates/SalePriceListGridTemplate.html
@@ -3,7 +3,7 @@
              dataretrievalfunction="dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
-             idfield="Entity.PriceListId" defaultsortbyfieldname="'OwnerName'" enableautoexport="true">
+             idfield="Entity.PriceListId" enableautoexport="true" defaultsortbyfieldname="ctrl.defaultSortByFieldName" defaultsortdirection="ctrl.defaultSortDirection">
 
     <vr-datagridcolumn headertext="'ID'" field="'Entity.PriceListId'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Customer Name'" field="'OwnerName'" type="'Text'"></vr-datagridcolumn>
