--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SalePricelistManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SalePricelistManagement.html
@@ -24,7 +24,7 @@
         </vr-row>
         <vr-row>
             <vr-columns width="fullrow">
-                <vr-whs-be-salepricelist-grid on-ready="onGridReady"></vr-whs-be-salepricelist-grid>
+                <vr-whs-be-salepricelist-grid on-ready="onGridReady" default-sort-by-field-name="Entity.CreatedTime" default-sort-direction="DESC"></vr-whs-be-salepricelist-grid>
             </vr-columns>
         </vr-row>
     </vr-form>
