implementing edit code group
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42466

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CodeGroup/CodeGroupEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CodeGroup/CodeGroupEditor.html
@@ -1,7 +1,7 @@
 ﻿<div vr-modalcontent ng-controller="WhS_BE_CodeGroupEditorController" vr-loader="isGettingData">
     <vr-modalbody>
         <vr-form name="formCountryEditor">
-            <vr-row removeline>
+            <vr-row ng-hide="hideEditorController" removeline>
                 <vr-columns width="1/2row">
                     <vr-textbox type="number" minvalue="0" decimalprecision="0" value="code" label="Code Group" isrequired></vr-textbox>
                 </vr-columns>
@@ -10,13 +10,16 @@
                         <vr-common-country-selector isrequired="true" on-ready="onCountryDirectiveReady" isrequired showaddbutton></vr-common-country-selector>
                     </vr-columns>
                 </span>
-            </vr-row>
-        </vr-form>
+            </vr-row >
+            <vr-row ng-show="hideEditorController">
+                <vr-label>{{msgOfConnotEdit}}</vr-label>
+                </vr-row>
+</vr-form>
     </vr-modalbody>
     <div>
         <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
             <div transclude-to="buttons">
-                <vr-button type="Save" formname="formCountryEditor" data-onclick="saveCodeGroup" haspermission="hasSaveCodeGroupPermission"></vr-button>
+                <vr-button type="Save" formname="formCountryEditor" data-onclick="saveCodeGroup" haspermission="hasSaveCodeGroupPermission" vr-disabled="disabledSaveButton"></vr-button>
                 <vr-button type="Close" data-onclick="close"></vr-button>
             </div>
         </vr-actionbar>
