Arranging vr-analytic-recordprofilingoutputsettings-editor
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42492

--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/OutputDefinitions/Templates/RecordProfilingOutputSettingsEditorTemplate.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/OutputDefinitions/Templates/RecordProfilingOutputSettingsEditorTemplate.html
@@ -1,6 +1,4 @@
-﻿
-
-<vr-tab header="'Record Type'">
+﻿<vr-tab header="'Record Type'">
     <vr-row>
         <vr-columns width="1/2row" vr-loader="scopeModel.isSelectorLoading">
             <vr-genericdata-datarecordtype-selector on-ready="scopeModel.onDataRecordTypeSelectorReady"
