implementing analytic table selector in routing technical settings
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42493

--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RouteTechnicalSettings/Templates/RouteTechnicalSettingsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RouteTechnicalSettings/Templates/RouteTechnicalSettingsTemplate.html
@@ -12,5 +12,12 @@
                 </vr-genericdata-datatransformationdefinition-selector>
             </vr-section>
         </vr-tab>
+        <vr-tab header="'Quality Configuration'">
+               <vr-row>
+                    <vr-columns width="1/2row">
+                        <vr-analytic-table-selector on-ready="onQualityAnalyticTableReady" isrequired="true" customlabel="Quality Analytic" hideremoveicon></vr-analytic-table-selector>
+                    </vr-columns>
+                </vr-row>
+        </vr-tab>
     </vr-tabs>
 </vr-columns>
