--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/Extensions/RouteReader/Templates/RouteSyncReaderTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/Extensions/RouteReader/Templates/RouteSyncReaderTemplate.html
@@ -4,7 +4,5 @@
            selectedvalues="scopeModel.selectedRouteRangeType"
            datavaluefield="value"
            datatextfield="description"
-           isrequired="true"
-           label="Range Type"
-           hideremoveicon>
+           label="Range Type">
 </vr-select>
