adding compress file to salepricelist send email + some enhancement at the level of pricelist
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42522

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SalePriceListChange.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SalePriceListChange.html
@@ -74,6 +74,7 @@
                                                               normal-col-num="6"
                                                               isrequired="true">
                         </vr-whs-be-salepricelisttype-selector>
+                        <vr-switch value="scopeModel.compressPriceListFile" label="Compress PriceList File"></vr-switch>
                     </vr-row>
                 </vr-tab>
             </vr-tabs>
