--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierAccountEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierAccountEditor.html
@@ -103,6 +103,9 @@
                                                               normal-col-num="6"
                                                               isrequired="false">
                         </vr-whs-be-salepricelisttype-selector>
+                        <vr-columns width="1/2row">
+                            <vr-switch value="scopeModel.compressPriceListFile" label="Compress PriceList File"></vr-switch>
+                        </vr-columns>
                     </vr-row>
                 </vr-tab>
                 <vr-tab header="'Supplier Settings'" ng-if="scopeModel.showZoneServiceConfig">
