integration of vr-select toolbox lookandfeeltype
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42524

--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Elements/Notification/DataRecord/AlertRule/Views/AlertRuleRecordEditor.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Elements/Notification/DataRecord/AlertRule/Views/AlertRuleRecordEditor.html
@@ -4,9 +4,9 @@
             <vr-tabs>
                 <vr-tab header="'Criteria'">
                     <vr-row>
-                        <vr-notification-alertlevel-selector on-ready="scopeModel.onVRNotificationAlertlevelSelectorReady"
+                        <vr-notification-alertlevel-selector lookandfeeltype="toolbox" on-ready="scopeModel.onVRNotificationAlertlevelSelectorReady"
                                                              selectedvalues="scopeModel.selectedAlertLevel"
-                                                             isrequired="true" normal-col-num="3">
+                                                             isrequired="true" normal-col-num="12">
                         </vr-notification-alertlevel-selector>
                     </vr-row>
                     <vr-row>
