--- a/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Views/VRAlertRuleSettings/AlertRuleSettingsEditor.html
+++ b/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Views/VRAlertRuleSettings/AlertRuleSettingsEditor.html
@@ -4,7 +4,7 @@
             <vr-tabs>
                 <vr-tab header="'Threshold'">
                     <vr-row>
-                        <vr-notification-alertlevel-selector on-ready="scopeModel.onVRNotificationAlertlevelSelectorReady" normal-col-num="4" isrequired="true"></vr-notification-alertlevel-selector>
+                        <vr-notification-alertlevel-selector on-ready="scopeModel.onVRNotificationAlertlevelSelectorReady" normal-col-num="12" lookandfeeltype="toolbox"  isrequired="true"></vr-notification-alertlevel-selector>
                         <vr-notification-balancealertrule-threshold-selector on-ready="scopeModel.onVRBalanceAlertRuleThresholdDirectiveReady" normal-col-num="4"></vr-notification-balancealertrule-threshold-selector>
                     </vr-row>
                 </vr-tab>
