Editing Loader @NewInstanceEditor
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42525

--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/NewInstanceEditor/NewInstanceEditor.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/NewInstanceEditor/NewInstanceEditor.html
@@ -1,6 +1,6 @@
-﻿<div vr-modalcontent width="'50%'" ng-controller="FraudAnalysis_NewInstanceEditorController">
-    <vr-modalbody >
-        <vr-form name="formCreateProcessInput" vr-loader="isLoading">
+﻿<div vr-modalcontent width="'50%'" ng-controller="FraudAnalysis_NewInstanceEditorController" vr-loader="isLoading">
+    <vr-modalbody>
+        <vr-form name="formCreateProcessInput">
             <vr-row>
                 <vr-columns width="fullrow" ng-if="bpDefinitionObj.Configuration.ManualExecEditor">
                     <vr-directivewrapper directive="bpDefinitionObj.Configuration.ManualExecEditor" on-ready="onBPDefinitionManualDirectiveReady"></vr-directivewrapper>
