Adding CalculatePDDInSeconds @Vanrise.Common.Utilities Adding CurrencySQLColumnName @DARecordAggregate_SumAggregate Editing ExecuteRecordProfiling Activity
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42526

--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/OutputDefinitions/Templates/RecordProfilingOutputSettingsEditorTemplate.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/OutputDefinitions/Templates/RecordProfilingOutputSettingsEditorTemplate.html
@@ -15,7 +15,7 @@
             <vr-genericdata-recordfilter on-ready="scopeModel.onRecordFilterDirectiveReady"></vr-genericdata-recordfilter>
         </vr-row>
     </vr-section>
-    <vr-section title="Time Filter" collapsible>
+    <vr-section title="Time Filter" ng-show="false" collapsible>
         <vr-analytic-timerangefilter-selective on-ready="scopeModel.onTimeRangeFilterSelectiveReady" isrequired="false"></vr-analytic-timerangefilter-selective>
     </vr-section>
 </vr-tab>
