--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Product/ProductRuntime/MainExtensions/ProductTypes/Templates/PostPaidSettingsTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Product/ProductRuntime/MainExtensions/ProductTypes/Templates/PostPaidSettingsTemplate.html
@@ -1,7 +1,5 @@
-﻿
-
-<vr-columns width="1/2row">
-    <vr-textbox value="scopeModel.creditLimit" label="Credit Limit" type="number" minvalue="0" isrequired></vr-textbox>
+﻿<vr-columns width="1/2row" ng-show="scopeModel.showCreditLimit">
+    <vr-textbox value="scopeModel.creditLimit" label="Credit Limit" type="number" minvalue="0" isrequired="scopeModel.showCreditLimit"></vr-textbox>
 </vr-columns>
 
 
