--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/MainExtensions/AccountType/Part/Definition/Templates/AccountTypeOperatorPartDefinitionTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/MainExtensions/AccountType/Part/Definition/Templates/AccountTypeOperatorPartDefinitionTemplate.html
@@ -1,1 +1,4 @@
-﻿
+﻿<vr-columns width="1/2row">
+    <vr-switch value="scopeModel.invisibleMobileOperator" label="Invisible Mobile Operator"></vr-switch>
+</vr-columns>
+
