--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Product/ProductDefinition/MainExtensions/ExtendedSettings/Templates/PostPaidDefinitionSettingsTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Product/ProductDefinition/MainExtensions/ExtendedSettings/Templates/PostPaidDefinitionSettingsTemplate.html
@@ -1,3 +1,3 @@
 ﻿<vr-columns width="1/2row">
-    <vr-switch label="Optional Credit Limit" value="scopeModel.optionalCreditLimit"></vr-switch>
+    <vr-switch label="Invisible Credit Limit" value="scopeModel.invisibleCreditLimit"></vr-switch>
 </vr-columns>
