implementing Quality Configurations
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42539

--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RouteSettings/Templates/RouteSettingsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RouteSettings/Templates/RouteSettingsTemplate.html
@@ -17,5 +17,8 @@
         <vr-tab header="'Option Rule Configuration'">
             <vr-whs-routing-route-routeoptionruleconfiguration on-ready="scopeModel.onRouteOptionRuleConfigurationReady"></vr-whs-routing-route-routeoptionruleconfiguration>
         </vr-tab>
+        <vr-tab header="'Quality Configuration'">
+            <vr-whs-routing-route-qualityconfiguration on-ready="scopeModel.onQualityConfigurationReady"></vr-whs-routing-route-qualityconfiguration>
+        </vr-tab>
     </vr-tabs>
 </vr-columns>
