add selected column in salepricelist grid
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42543

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceList/Templates/SalePriceListGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceList/Templates/SalePriceListGridTemplate.html
@@ -4,7 +4,9 @@
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
              idfield="Entity.PriceListId" enableautoexport="true" defaultsortbyfieldname="ctrl.defaultSortByFieldName" defaultsortdirection="ctrl.defaultSortDirection">
-
+    <vr-datagridcolumn widthfactor="5" disablesorting="true" ng-show="!hideSelectedColumn">
+        <vr-check value="dataItem.isSelected"></vr-check>
+    </vr-datagridcolumn>
     <vr-datagridcolumn headertext="'ID'" field="'Entity.PriceListId'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Customer Name'" field="'OwnerName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Created Time'" field="'Entity.CreatedTime'" type="'Datetime'"></vr-datagridcolumn>
